# llm-classifier

./: LICENSE  README.md  pyproject.toml
llm_classifier/: main.py
llm_classifier/benchmarking/: benchmark.py
llm_classifier/benchmarking/results/: NousResearch_Nous-Hermes-13b_runtime.json  TheBloke_Wizard-Vicuna-13B-Uncensored-HF_runtime.json  TheBloke_stable-vicuna-13B-HF_runtime.json  distilbert-base-uncased_runtime.json  nghuyong_ernie-2.0-base-en_runtime.json  nomic-ai_gpt4all-13b-snoozy_runtime.json
llm_classifier/data/: results.csv
llm_classifier/data/partisanship/: partisanship_sample.parquet
llm_classifier/data/partisanship/NousResearch_Nous-Hermes-13b/: partisanship_few_predictions.csv  partisanship_zero_predictions.csv
llm_classifier/data/partisanship/TheBloke_Wizard-Vicuna-13B-Uncensored-HF/: partisanship_few_predictions.csv  (+1 more)
llm_classifier/data/partisanship_account/: partisanship_account_few_predictions.csv  partisanship_account_sample.parquet
llm_classifier/data/topic/: topic_sample.parquet  topic_train.parquet
llm_classifier/data/trustworthy/: trustworthy_sample.parquet
llm_classifier/data/trustworthy_account/: trustworthy_account_few_predictions.csv  trustworthy_account_sample.parquet
llm_classifier/experiments/: emergent_knowledge.sh  knowledge_distillation.sh  pretrain_comparison.sh
llm_classifier/notebooks/.ipynb_checkpoints/: account_reputation-checkpoint.ipynb  explore-checkpoint.ipynb  visualize-checkpoint.ipynb
llm_classifier/utils/: conversation.py  data_handling.py  download.py  evaluate.py  model.py  prompt.py  tasks.py
(+31 files in other folders)
